# OOP_lab1_Big_int

./: BIgInt.cpp  BIgInt.h  BigInt.cpp  BigInt.h  CMakeLists.txt  README.md  gtest.cpp  main.cpp
